--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,15 @@ databaseChangeLog:
   - include:
       file: 0.0.1/changelog-create-twitter-schema.sql
       relativeToChangelogFile: true
+  - include:
+      file: 0.0.1/changelog-create-identity-schema.sql
+      relativeToChangelogFile: true
+  - include:
+      file: 0.0.1/changelog-create-twitter-user_profile-table.sql
+      relativeToChangelogFile: true
+  - include:
+      file: 0.0.1/changelog-create-twitter-tweets-table.sql
+      relativeToChangelogFile: true
+  - include:
+      file: 0.0.1/changelog-create-twitter-subscriptions-table.sql
+      relativeToChangelogFile: true
